--- a/app/src/main/res/layout/content_view_details.xml
+++ b/app/src/main/res/layout/content_view_details.xml
@@ -34,7 +34,7 @@
                 android:textSize="16dp" />
 
             <EditText
-                android:id="@+id/currentValue"
+                android:id="@+id/powerUsedValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
@@ -60,7 +60,7 @@
                 android:text="0-25kV:" />
 
             <EditText
-                android:id="@+id/lowPowerUsed"
+                android:id="@+id/lowPowerUsedValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.8"
@@ -97,7 +97,7 @@
                 android:text="26-150kV:" />
 
             <EditText
-                android:id="@+id/normalValueUsed"
+                android:id="@+id/normalPowerUsedValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.8"
@@ -134,7 +134,7 @@
                 android:text="26-150kV:" />
 
             <EditText
-                android:id="@+id/highValueUsed"
+                android:id="@+id/highPowerUsedValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.8"
